--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "test:ui": "vitest --ui"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
     "@vitest/ui": "^3.2.4",
+    "eslint": "^9.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
     "jsdom": "^26.1.0",
+    "typescript-eslint": "^8.38.0",
     "vite": "^7.0.5",
     "vitest": "^3.2.4"
   }
